<?xml version="1.0"?>
<package format="2">
  <name>uwrt_robot_server</name>
  <version>1.0.0</version>
  <description>Robot Server for UWRT Arm</description>

  <author email="akeaveny@uwaterloo.ca">Aidan Keaveny</author>

  <maintainer email="akeaveny@uwaterloo.ca">Aidan Keaveny</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>

  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>uwrt_gazebo</exec_depend>
  <exec_depend>tmux</exec_depend>
  <exec_depend>gazebo_ros_pkgs</exec_depend>

  <export>
  </export>
</package>
